# PythonCourse

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
002_fundamental_operation/: 002_built_in_func.ipynb  002_fundamental_operation.ipynb  glossary.ipynb  test.txt
003_control_flow/: 003_control_flow.ipynb  answer.ipynb
004_comprehension/: 004_comprehension.ipynb  answer.ipynb
005_ternary_operator/: 005_ternary_operator.ipynb
006_def_class/: 006_def_class.ipynb  answer.ipynb  data.txt  mymodule.py
007_std_libs/: 007_std_libs.ipynb  answer.ipynb
008_numpy_firststep/: 008_numpy_firststep.ipynb  answer.ipynb
009_pyautogui/: example_pyautogui.py  gui00_mouse.py  gui01_keyboard.py  gui02_msgbox.py  gui03_screenshot.py
010_pandas_firststep/: 010_pandas_firststep.ipynb  answer.ipynb
011_excel/: 011_excel.ipynb  answer.ipynb  data_00.xlsx  data_01.xlsx  data_02.xlsx  data_03.xlsx  data_04.xlsx  data_05.xlsx  data_06.xlsx  data_07.xlsx
012_matplotlib/: 012_matplotlib.ipynb  answer.ipynb
013_LinearRegression/: 013_LinearRegression.ipynb
014_LASSO-Ridge-ElasticNet/: 014_LASSO-Ridge-ElasticNet.ipynb  014_LASSO-Ridge-ElasticNet_answer.ipynb
015_SVM/: 015_SVM.ipynb  015_SVM_answer.ipynb
016_DecisionTree/: 016_DecisionTree.ipynb  016_DecisionTree_answer.ipynb
017_NeuralNetwork/: 017_NeuralNetwork.ipynb  017_NeuralNetwork_answer.ipynb
019_CNN/: 019_CNN.ipynb
020_pandas_concat/: pyproject.toml
020_pandas_concat/src/: eda.ipynb
021_large_table/: pyproject.toml
021_large_table/src/: 00_make_large_table.ipynb  01_read_large_table.ipynb
(+2 files in other folders)
