[tool.poetry]
name = "pandas-concat"
version = "0.1.0"
description = ""
authors = ["Kazuto Makino"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1.1"
tqdm = "^4.66.1"
polars = "^0.19.5"
seaborn = "^0.12.2"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
autopep8 = "^2.0.4"
pyproject-flake8 = "^6.1.0"
isort = "^5.12.0"
jupyterlab = "^4.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
