[tool.poetry]
name = "large-table"
version = "0.1.0"
description = ""
authors = ["Kazuto Makino <55287424+KazutoMakino@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pyarrow = "^13.0.0"
pandas = "^2.1.0"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
autopep8 = "^2.0.4"
pyproject-flake8 = "^6.0.0.post1"
isort = "^5.12.0"
jupyterlab = "^4.0.6"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
